ejemplos de ejecucion

--- a/analisis.ipynb
+++ b/analisis.ipynb
@@ -253,10 +253,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 PETICIONES\n",
+      "\n",
+      "Algoritmo Optimo:\n",
+      "Cantidad de jugadores: 2\n",
+      "Lista de jugadores: ['Cuti Romero', 'Wachoffisde Abila']\n",
+      "\n",
+      "Algoritmo Aproximado:\n",
+      "Cantidad de jugadores: 2\n",
+      "Lista de jugadores: ['Casco', 'Colo Barco']\n",
+      "\n",
+      "\n",
+      "7 PETICIONES\n",
+      "\n",
+      "Algoritmo Optimo:\n",
+      "Cantidad de jugadores: 2\n",
+      "Lista de jugadores: ['Colidio', \"Barcon't\"]\n",
+      "\n",
+      "Algoritmo Aproximado:\n",
+      "Cantidad de jugadores: 2\n",
+      "Lista de jugadores: [\"Barcon't\", 'Colidio']\n",
+      "\n",
+      "\n",
+      "10 PETICIONES\n",
+      "\n",
+      "Algoritmo Optimo:\n",
+      "Cantidad de jugadores: 3\n",
+      "Lista de jugadores: ['Chiquito Romero', 'Di Maria', 'Casco']\n",
+      "\n",
+      "Algoritmo Aproximado:\n",
+      "Cantidad de jugadores: 4\n",
+      "Lista de jugadores: ['Wachoffisde Abila', 'Gallardo', 'Di Maria', 'Messi']\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5 elems\n",
+    "A, B = obtener_conjunto_y_subconjuntos(\"./archivos_prueba/5.txt\")\n",
+    "ejecucion_optimo = obtener_hitting_set(A, B)\n",
+    "ejecucion_aproximado = hitting_set_greedy(A, B)\n",
+    "print('5 PETICIONES\\n')\n",
+    "print(f'Algoritmo Optimo:\\nCantidad de jugadores: {len(ejecucion_optimo)}\\nLista de jugadores: {ejecucion_optimo}\\n')\n",
+    "print(f'Algoritmo Aproximado:\\nCantidad de jugadores: {len(ejecucion_aproximado)}\\nLista de jugadores: {ejecucion_aproximado}\\n')\n",
+    "\n",
+    "A, B = obtener_conjunto_y_subconjuntos(\"./archivos_prueba/7.txt\")\n",
+    "ejecucion_optimo = obtener_hitting_set(A, B)\n",
+    "ejecucion_aproximado = hitting_set_greedy(A, B)\n",
+    "print('\\n7 PETICIONES\\n')\n",
+    "print(f'Algoritmo Optimo:\\nCantidad de jugadores: {len(ejecucion_optimo)}\\nLista de jugadores: {ejecucion_optimo}\\n')\n",
+    "print(f'Algoritmo Aproximado:\\nCantidad de jugadores: {len(ejecucion_aproximado)}\\nLista de jugadores: {ejecucion_aproximado}\\n')\n",
+    "\n",
+    "A, B = obtener_conjunto_y_subconjuntos(\"./archivos_prueba/10_pocos.txt\")\n",
+    "ejecucion_optimo = obtener_hitting_set(A, B)\n",
+    "ejecucion_aproximado = hitting_set_greedy(A, B)\n",
+    "print('\\n10 PETICIONES\\n')\n",
+    "print(f'Algoritmo Optimo:\\nCantidad de jugadores: {len(ejecucion_optimo)}\\nLista de jugadores: {ejecucion_optimo}\\n')\n",
+    "print(f'Algoritmo Aproximado:\\nCantidad de jugadores: {len(ejecucion_aproximado)}\\nLista de jugadores: {ejecucion_aproximado}\\n')\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
