analisis medicion de tiempo bt

--- a/analisis.ipynb
+++ b/analisis.ipynb
@@ -110,7 +110,7 @@
    "source": [
     "### Tiempo del algoritmo optimo en funcion de la cantidad de peticiones *n*\n",
     "\n",
-    "* En estas pruebas se vera"
+    "* En estas pruebas se vera como la cantidad de peticiones por parte de la prensa afecta al tiempo que tarda el algoritmo optimo por backtracking"
    ]
   },
   {
@@ -151,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se puede observar"
+    "Se puede observar que a medida que aumenta el valor de *n* el tiempo que tarda el algoritmo aumenta exponencialmente."
    ]
   },
   {
