--- a/analisis.ipynb
+++ b/analisis.ipynb
@@ -189,15 +189,16 @@
    "source": [
     "import numpy as np\n",
     "import random\n",
-    "from tqdm import tqdm  # Importa tqdm\n",
+    "from tqdm import tqdm\n",
     "\n",
     "random.seed(7)\n",
     "\n",
     "def n_log_n(n):\n",
     "    return n * np.log(n)\n",
+    "\n",
     "MAX_SUBCONJUNTOS = 1000\n",
+    "\n",
     "def plottear_tiempos_de_aproximado_en_funcion_de_cantidad_de_peticiones():\n",
-    "    # archivos = [\"./archivos_prueba/5.txt\", \"./archivos_prueba/10_varios.txt\", \"./archivos_prueba/15.txt\", \"./archivos_prueba/20.txt\", \"./archivos_prueba/50.txt\", \"./archivos_prueba/75.txt\", \"./archivos_prueba/100.txt\", \"./archivos_prueba/150_not_for_testing.txt\", \"./archivos_prueba/175_not_for_testing.txt\", \"./archivos_prueba/200.txt\"]\n",
     "    cantidades = []\n",
     "    tiempos = []\n",
     "    for i in tqdm(range(1, MAX_SUBCONJUNTOS + 1, 10), desc=\"Corriendo benchmark\"):\n",
@@ -211,21 +212,13 @@
     "        cantidades.append(i)\n",
     "        tiempos.append(correr_benchmark_aproximado(A, B))\n",
     "\n",
-    "\n",
-    "    df = pd.DataFrame(data={\"cantidades\": cantidades, \"tiempos\": tiempos})\n",
-    "\n",
-    "    # Calcula los valores de n(log(n))\n",
-    "    # df['n_log_n'] = df['cantidades'].apply(n_log_n)\n",
-    "\n",
-    "    # Traza la gráfica\n",
     "    df = pd.DataFrame(data={\"cantidades\": cantidades, \"tiempos\": tiempos})\n",
     "    sns.lmplot(x='cantidades', y='tiempos', data=df, order=2)\n",
     "    plt.title(\"Tiempo en funcion de la cantidad de peticiones\")\n",
     "    plt.xlabel(\"Cantidad de peticiones (n)\")\n",
     "    plt.ylabel(\"Tiempo de ejecucion (s)\")\n",
     "    \n",
-    "\n",
-    "plottear_tiempos_de_aproximado_en_funcion_de_cantidad_de_peticiones()\n"
+    "plottear_tiempos_de_aproximado_en_funcion_de_cantidad_de_peticiones()"
    ]
   },
   {
@@ -244,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -255,11 +248,11 @@
       "\n",
       "Algoritmo Optimo:\n",
       "Cantidad de jugadores: 2\n",
-      "Lista de jugadores: ['Cuti Romero', 'Wachoffisde Abila']\n",
+      "Lista de jugadores: ['Casco', 'Messi']\n",
       "\n",
       "Algoritmo Aproximado:\n",
       "Cantidad de jugadores: 2\n",
-      "Lista de jugadores: ['Casco', 'Colo Barco']\n",
+      "Lista de jugadores: ['Casco', 'Messi']\n",
       "\n",
       "\n",
       "7 PETICIONES\n",
@@ -277,11 +270,11 @@
       "\n",
       "Algoritmo Optimo:\n",
       "Cantidad de jugadores: 3\n",
-      "Lista de jugadores: ['Chiquito Romero', 'Di Maria', 'Casco']\n",
+      "Lista de jugadores: ['Gallardo', 'Cuti Romero', 'Casco']\n",
       "\n",
       "Algoritmo Aproximado:\n",
       "Cantidad de jugadores: 4\n",
-      "Lista de jugadores: ['Wachoffisde Abila', 'Gallardo', 'Di Maria', 'Messi']\n",
+      "Lista de jugadores: ['Wachoffisde Abila', 'Gallardo', 'Dibu', 'Casco']\n",
       "\n"
      ]
     }
@@ -315,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cota empirica"
+    "## Cota empirica del algoritmo aproximado"
    ]
   },
   {
@@ -385,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
