--- a/analisis.ipynb
+++ b/analisis.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -255,11 +255,11 @@
       "\n",
       "Algoritmo Optimo:\n",
       "Cantidad de jugadores: 2\n",
-      "Lista de jugadores: ['Casco', 'Messi']\n",
+      "Lista de jugadores: [\"Barcon't\", 'Messi']\n",
       "\n",
       "Algoritmo Aproximado:\n",
       "Cantidad de jugadores: 2\n",
-      "Lista de jugadores: ['Casco', 'Messi']\n",
+      "Lista de jugadores: ['Casco', 'Cuti Romero']\n",
       "\n",
       "\n",
       "7 PETICIONES\n",
@@ -277,11 +277,11 @@
       "\n",
       "Algoritmo Optimo:\n",
       "Cantidad de jugadores: 3\n",
-      "Lista de jugadores: ['Gallardo', 'Cuti Romero', 'Casco']\n",
+      "Lista de jugadores: ['Chiquito Romero', 'Di Maria', 'Casco']\n",
       "\n",
       "Algoritmo Aproximado:\n",
       "Cantidad de jugadores: 4\n",
-      "Lista de jugadores: ['Wachoffisde Abila', 'Gallardo', 'Dibu', 'Casco']\n",
+      "Lista de jugadores: ['Wachoffisde Abila', 'Gallardo', 'Cuti Romero', 'Messi']\n",
       "\n"
      ]
     }
@@ -385,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
